k8s/base/mongodb-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb
  namespace: noteapp

spec:
  selector:
    app: mongodb

  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

  type: ClusterIP
